# pomodoro-timer

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.codegraph/: daemon.pid
docs/superpowers/plans/: 2026-07-03-pomodoro-macos-foreground-tracking.md  2026-07-07-pomodoro-notification.md  2026-07-07-pomodoro-sqlite-persistence.md  2026-07-07-session-detail-ardot-redesign.md
docs/superpowers/specs/: 2026-07-03-pomodoro-macos-foreground-tracking-design.md  2026-07-07-pomodoro-notification-design.md  2026-07-07-pomodoro-sqlite-persistence-design.md
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  foreground.rs  lib.rs  models.rs  runtime.rs  stats.rs  storage.rs
src/features/pomodoro/: PomodoroApp.tsx  focusSessionApi.ts  formatters.ts  notification.ts  sessionMode.ts  types.ts  usePomodoroTimer.ts
src/features/pomodoro/__tests__/: PomodoroApp.focusTracking.test.tsx  PomodoroApp.test.tsx  SessionDetailPage.test.tsx  StatsPage.test.tsx  TimerPage.test.tsx  UsageRow.test.tsx  focusSessionApi.test.ts  formatters.test.ts  notification.test.ts  usePomodoroTimer.test.tsx
src/features/pomodoro/components/: ActionButton.tsx  ModeTabs.tsx  SessionHistoryItem.tsx  StatCard.tsx  UsageRow.tsx
src/features/pomodoro/screens/: SessionDetailPage.tsx  StatsPage.tsx  TimerPage.tsx
